--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,15 +1,13 @@
-fastapi
 uvicorn
-python-docx
 aiofiles
 python-multipart
 websockets
-loguru
 requests
-PyYAML
-emoji
-dashscope
 funasr
 httpx
 pyaudio
 numpy
+python-jose[cryptography]
+passlib[bcrypt]
+pydantic[email]
+openpyxl
